# chromium-hist-bookmarks

./: .gitignore  Chromium Bookmarks and History Search.alfredworkflow  Chromium Bookmarks and History.alfredworkflow  Chromium&Firefox Bookmarks and History.alfredworkflow  README.md  pyproject.toml
src/: Alfred.py  Alfred3.py  Favicon.py  actions.py  browser_config.py  browser_dispatcher.py  chrom_bookmarks.py  chrom_history.py  domain.py  info.plist  p3.sh  py3.sh
