[project]
name = "chromium-hist-bookmarks"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Acidham", email = "acidham@gmail.com" }
]
dependencies = [
    "click>=8.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chromium_hist_bookmarks"]
